--- a/index.html
+++ b/index.html
@@ -1015,22 +1015,19 @@ h4 {
         </button> 
         </a><br>
         Social<br>
-        <a target="blank" href="https://instagram.com/_u/viirtypc">
-          <button class="button button7"><span>Soundcloud</span>  
+        <a target="blank" href="https://www.instagram.com/lylsquared/">
+          <button class="button button7"><span>Instagram</span>  
+        </button></a><br>
+        <a target="blank" href="https://www.youtube.com/channel/UCvYBA2RvBRzn8KHb8tEiZHQ">
+          <button class="button button7"><span>YouTube</span>  
         </button></a><br>
         <a target="blank" href="https://instagram.com/_u/viirtypc">
           <button class="button button7"><span>Spotify</span>  
         </button></a><br>
-        <a target="blank" href="https://instagram.com/_u/viirtypc">
-          <button class="button button7"><span>YouTube</span>  
-        </button></a><br>
-        <a target="blank" href="https://instagram.com/_u/viirtypc">
-          <button class="button button7"><span>Instagram</span>  
-        </button></a><br>
-        <a target="blank" href="https://instagram.com/_u/viirtypc">
+        <a target="blank" href="https://www.instagram.com/lylsquared/">
           <button class="button button7"><span>Bird</span>  
         </button></a><br>
-        <a target="blank" href="https://instagram.com/_u/viirtypc">
+        <a target="blank" href="https://www.instagram.com/lylsquared/">
           <button class="button button7"><span>I forget what else</span>  
         </button></a><br>
       </div>
