--- a/index.html
+++ b/index.html
@@ -999,18 +999,8 @@ h4 {
     </article>
     <aside class="side">
       <div class="bloc1 fontmedium">
-        Pages<br>
-        <a href="index.html">
-        <button class="button button7"><span>Home</span>
-        </button></a><br>
-        <a href="index.html">
-        <button class="button button7"><span>Bad Art</span>
-        </button></a><br>	
-        <a href="index.html">
-        <button class="button button7"><span>Stuff</span>
-        </button></a><br>
         Contact<br>
-        <a href="mailto:help@lylianmusic.com?subject=Helloo"> 
+        <a href="mailto:hello@viirty.com?subject=Henlo"> 
         <button class="button button7"><span>Email</span>
         </button> 
         </a><br>
@@ -1018,17 +1008,14 @@ h4 {
         <a target="blank" href="https://www.instagram.com/lylsquared/">
           <button class="button button7"><span>Instagram</span>  
         </button></a><br>
-        <a target="blank" href="https://www.youtube.com/channel/UCvYBA2RvBRzn8KHb8tEiZHQ">
+        <a target="blank" href="https://www.youtube.com/@lylianmusic">
           <button class="button button7"><span>YouTube</span>  
         </button></a><br>
-        <a target="blank" href="https://instagram.com/_u/viirtypc">
+        <a target="blank" href="https://open.spotify.com/artist/5bS0MxleqHivgYcnSAnZNJ?si=vBmObqQDQ2qz2XSceF6LHg">
           <button class="button button7"><span>Spotify</span>  
         </button></a><br>
         <a target="blank" href="https://www.instagram.com/lylsquared/">
           <button class="button button7"><span>Bird</span>  
-        </button></a><br>
-        <a target="blank" href="https://www.instagram.com/lylsquared/">
-          <button class="button button7"><span>I forget what else</span>  
         </button></a><br>
       </div>
     </aside>
