--- a/index.html
+++ b/index.html
@@ -887,22 +887,22 @@ h4 {
     <nav class="main-nav">
       <div class="bloc1">
         Buttons<br>       
-          <a href="sale.html">
+          <a href="index.html">
           <button class="button button2500"><span>Red</span>
           </button>
           </a><br>
-          <a href="sale2.html">
+          <a href="index.html">
           <button class="button button3500"><span>Blue</span>
           </button>
           </a><br>
-          <a href="sale3.html">
+          <a href="index.html">
           <button class="button button4500"><span>Green</span>
           </button>
         </a>
       </div><br>
       <div class="bloc1">
         Subpar, slightly lesser,<br>button<br>
-          <a href="sale.html">
+          <a href="index.html">
           <button class="button button2500 greybutton"><span>Grey</span>
           </button>
           </a>
@@ -1010,6 +1010,9 @@ h4 {
         </button></a><br>
         <a target="blank" href="https://www.youtube.com/@lylianmusic">
           <button class="button button7"><span>YouTube</span>  
+        </button></a><br>
+        <a target="blank" href="https://www.youtube.com/@lyliansquared">
+          <button class="button button7"><span>YouTube_2</span>  
         </button></a><br>
         <a target="blank" href="https://open.spotify.com/artist/5bS0MxleqHivgYcnSAnZNJ?si=vBmObqQDQ2qz2XSceF6LHg">
           <button class="button button7"><span>Spotify</span>  
